--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="studentRoster">
   <head>
     <title>You will be schooled here</title>
     <script src="lib/angular.js"></script>
     <script src="app.js"></script>
+    <script src="js/StudentsController.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   </head>
   <body>
+    <div class="container" ng-controller="StudentsCtrl">
+      <div class="row">
+        <div class="col-md-12">
+          <h2>Student List</h2>
+          <ul>
+            <li ng-repeat="item in students">
+              {{item.name}}
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
