--- a/index.html
+++ b/index.html
@@ -9,18 +9,24 @@
   </head>
   <body>
     <div class="container" ng-controller="StudentsCtrl">
-      <div class="row">
-        <div class="col-md-12">
-          <h2>Student List</h2>
-          <h3 ng-chicken-dance="cluck-cluck-cluck">Dance here</h3>
-          <ul>
-            <li ng-repeat="item in students">
+      <div id="student-list">
+        <h2>Student List</h2>
+        <h3 ng-chicken-dance="cluck-cluck-cluck">Dance here</h3>
+        <ul>
+          <li ng-repeat="item in students">
+            <span ng-click="editing = true" ng-hide="editing">
               {{item.name}} <a ng-click="deleteStudent(item)">Delete</a>
-            </li>
-          </ul>
-        </div>
+            </span>
+            <span class="form-group" ng-show="editing" ng-submit="editing = false">
+              <form class="form-inline" role="form">
+                <input type="text" class="form-control input-sm" ng-model="item.name" placeholder="Name" required/>
+                <button class="btn btn-default btn-sm" type="submit">Save</button>
+              </form>
+            </span>
+          </li>
+        </ul>
       </div>
-      <div class="row">
+      <div id="new-student">
         <h2>New Student</h2>
         <form ng-submit="addStudent()" class="form-inline" role="form">
           <div class="form-group">
